# sentinel-2-pipeline

docs/: surrey_ndvi.pgw
engine/crates/sentinel_azure/: Cargo.toml
engine/crates/sentinel_azure/src/: main.rs
engine/crates/sentinel_cog/: Cargo.toml  README.md
engine/crates/sentinel_cog/src/: decode.rs  geo.rs  lib.rs  parse.rs
engine/crates/sentinel_cog/tests/: overview.rs
engine/crates/sentinel_db/: Cargo.toml
engine/crates/sentinel_db/src/: connection.rs  error.rs  insert.rs  lib.rs  listener.rs
engine/crates/sentinel_ndvi/: Cargo.toml  README.md
engine/crates/sentinel_ndvi/src/: analysis.rs  geotiff.rs  ndvi.rs
engine/crates/sentinel_ndvi/tests/: ndvi.rs
engine/crates/sentinel_orchestrator/: Cargo.toml
engine/crates/sentinel_orchestrator/src/: config.rs  lib.rs  main.rs  predict.rs  run.rs  tle.rs
engine/crates/sentinel_orchestrator/tests/: orchestrator.rs  run_test.rs  tle_tests.rs
engine/crates/sentinel_pipeline/src/: error.rs  pass.rs  stac.rs
engine/crates/sentinel_pipeline/tests/: ingestion.rs  real_scene.rs
engine/crates/sentinel_runner/src/: config.rs  main.rs
engine/crates/sentinel_types/src/: bbox.rs  event.rs  lib.rs  ndvi_record.rs
engine/sql/: ndvi_history.sql
