[package]
name = "sentinel_cog"
version = "0.2.0"
edition = "2024"
description = "Stream Sentinel-2 Cloud Optimized GeoTIFF tiles via HTTP range requests — no full-band download required"
repository = "https://github.com/your-username/satellite-tracker"
license = "MIT"
readme = "README.md"

[dependencies]
sentinel_types = {version = "0.1.1", path = "../sentinel_types"}
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
bytes = "1"
image = { version = "0.25", features = ["tiff"] }
anyhow = "1"
flate2 = "1"
thiserror  = "1"
log = "0.4"