[package]
name = "sentinel_ndvi"
version = "0.2.0"
edition = "2024"
description = "NDVI computation and GeoTIFF output for Sentinel-2 rasters"
repository = "https://github.com/your-username/satellite-tracker"
license = "MIT"
readme = "README.md"
 
[dependencies]
sentinel_cog = {version = "0.2.0", path = "../sentinel_cog" }
image = "0.24"
tiff = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
 