[package]
name = "sentinel_orchestrator"
version = "0.1.0"
edition = "2024"
 
[[bin]]
name = "sentinel_orchestrator"
path = "src/main.rs"
 
[dependencies]
sentinel_pipeline = { path = "../sentinel_pipeline" }
sentinel_db = { path = "../sentinel_db" }
sentinel_types = { path = "../sentinel_types" }
chrono = "0.4.44"
env_logger = "0.11"
log = "0.4"
dotenvy = "0.15.7"

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["postgres", "blocking"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
 